--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body{
     display: flex;
-    background-color: aqua;
+    background-color: #f5f5f5;
     justify-content: center;
     align-items: center;
 }
